--- a/ProyectoWeb/ProyectoWebApp/static/ProyectoWebApp/css/gestion.css
+++ b/ProyectoWeb/ProyectoWebApp/static/ProyectoWebApp/css/gestion.css
@@ -1,324 +1,384 @@
 /* Este CSS define el estilo general del cuerpo del sitio */
+
 body {
-  font-family: 'Lora';
-  background: linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url("../img/bg_main.jpg");
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
+    font-family: 'Lora';
+    background: linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url("../img/bg_main.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
 }
 
+
 /* Estilos para encabezados */
+
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  font-family: 'Raleway';
+    font-family: 'Raleway';
 }
+
 
 /* Estilos para párrafos */
+
 p {
-  line-height: 1.75;
+    line-height: 1.75;
 }
+
 
 /* Texto tenue */
+
 .text-faded {
-  color: rgba(255, 255, 255, 0.3);
+    color: rgba(255, 255, 255, 0.3);
 }
 
+
 /* Encabezado del sitio */
+
 .site-heading {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
-  text-transform: uppercase;
-  line-height: 1;
-  font-family: 'Raleway';
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+    text-transform: uppercase;
+    line-height: 1;
+    font-family: 'Raleway';
 }
 
 .site-heading .site-heading-upper {
-  display: block;
-  font-size: 2rem;
-  font-weight: 800;
+    display: block;
+    font-size: 2rem;
+    font-weight: 800;
 }
 
 .site-heading .site-heading-lower {
-  font-size: 5rem;
-  font-weight: 100;
-  line-height: 4rem;
+    font-size: 5rem;
+    font-weight: 100;
+    line-height: 4rem;
 }
+
 
 /* Sección de la página */
+
 .page-section {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
 }
 
+
 /* Encabezado de sección */
+
 .section-heading {
-  text-transform: uppercase;
+    text-transform: uppercase;
 }
 
 .section-heading .section-heading-upper {
-  display: block;
-  font-size: 1rem;
-  font-weight: 800;
-  padding-bottom:.5rem;
+    display: block;
+    font-size: 1rem;
+    font-weight: 800;
+    padding-bottom: .5rem;
 }
 
 .section-heading .section-heading-lower {
-  display: block;
-  font-size: 3rem;
-  font-weight: 100;
+    display: block;
+    font-size: 3rem;
+    font-weight: 100;
 }
 
 .section-heading .section-heading-under {
-  display: block;
-  font-size: 1rem;
-  text-transform: none;
-  font-weight: 300;
-  margin-top:.5rem;
+    display: block;
+    font-size: 1rem;
+    text-transform: none;
+    font-weight: 300;
+    margin-top: .5rem;
 }
+
 
 /* Fondo atenuado */
+
 .bg-faded {
-  background-color: rgba(255, 255, 255, 0.85);
+    background-color: rgba(255, 255, 255, 0.85);
 }
 
+
 /* Barra de navegación principal */
+
 #mainNav {
-  background-color: rgba(203, 70, 161, 0.962);
-  font-family: 'Raleway';
+    background-color: rgba(203, 70, 161, 0.962);
+    font-family: 'Raleway';
 }
 
 #mainNav .navbar-brand {
-  color: #ffffff;
+    color: #ffffff;
 }
 
 #mainNav .navbar-nav .nav-item .nav-link {
-  color: rgba(255, 255, 255, 0.7);
-  font-weight: 800;
+    color: rgba(255, 255, 255, 0.7);
+    font-weight: 800;
 }
 
 #mainNav .navbar-nav .nav-item.active .nav-link {
-  color: #ffffff;
-  text-decoration: underline;
-}
-
-/* Estilos responsivos para la barra de navegación */
-@media (min-width: 992px) {
-  #mainNav .navbar-nav .nav-item .nav-link {
-    font-size: 0.9rem;
-  }
-  #mainNav .navbar-nav .nav-item .nav-link:hover {
-    color: rgba(255, 255, 255, 0.4);
-    text-decoration: underline;
-  }
-  #mainNav .navbar-nav .nav-item.active .nav-link:hover {
     color: #ffffff;
     text-decoration: underline;
-  }
 }
+
+
+/* Estilos responsivos para la barra de navegación */
+
+@media (min-width: 992px) {
+    #mainNav .navbar-nav .nav-item .nav-link {
+        font-size: 0.9rem;
+    }
+    #mainNav .navbar-nav .nav-item .nav-link:hover {
+        color: rgba(255, 255, 255, 0.4);
+        text-decoration: underline;
+    }
+    #mainNav .navbar-nav .nav-item.active .nav-link:hover {
+        color: #ffffff;
+        text-decoration: underline;
+    }
+}
+
 
 /* Botones grandes */
+
 .btn-xl {
-  font-weight: 700;
-  font-size: 0.8rem;
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-  padding-left: 2rem;
-  padding-right: 2rem;
+    font-weight: 700;
+    font-size: 0.8rem;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 
+
 /* Introducción */
+
 .intro {
-  position: relative;
+    position: relative;
 }
 
 @media (min-width: 992px) {
-  .intro .intro-img {
-    width: 75%;
-    float: left;
-  }
-  .intro .intro-text {
-    left: 600;
-    width: 60%;
-    margin-top: 3rem;
-    background-color: rgb(151, 49, 103);
-    color: cornsilk;
-    position: absolute;
-  }
-  .intro .intro-text .intro-button {
-    width: 100%;
-    left: 0;
-    position: absolute;
-    bottom: -2rem;
-  }
+    .intro .intro-img {
+        width: 75%;
+        float: left;
+    }
+    .intro .intro-text {
+        left: 600;
+        width: 60%;
+        margin-top: 3rem;
+        background-color: rgb(151, 49, 103);
+        color: cornsilk;
+        position: absolute;
+    }
+    .intro .intro-text .intro-button {
+        width: 100%;
+        left: 0;
+        position: absolute;
+        bottom: -2rem;
+    }
 }
 
 @media (min-width: 1200px) {
-  .intro .intro-text {
-    width: 45%;
-  }
+    .intro .intro-text {
+        width: 45%;
+    }
 }
+
 
 /* Llamada a la acción */
+
 .cta {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-  background-color: rgb(242, 245, 240);
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+    background-color: rgb(242, 245, 240);
 }
 
+
 /* Estilos para el encabezado */
+
 .cta .cta-inner {
-  position: relative;
-  padding: 3rem;
-  margin: 0.5rem;
-  background-color: rgb(162, 61, 96);
-  color: cornsilk;
+    position: relative;
+    padding: 3rem;
+    margin: 0.5rem;
+    background-color: rgb(162, 61, 96);
+    color: cornsilk;
 }
 
 .cta .cta-inner:before {
-  border-radius: 0.5rem;
-  content: '';
-  position: absolute;
-  top: -0.5rem;
-  bottom: -0.5rem;
-  left: -0.5rem;
-  right: -0.5rem;
-  border: 0.25rem solid rgba(255, 255, 255, 0.85);
+    border-radius: 0.5rem;
+    content: '';
+    position: absolute;
+    top: -0.5rem;
+    bottom: -0.5rem;
+    left: -0.5rem;
+    right: -0.5rem;
+    border: 0.25rem solid rgba(255, 255, 255, 0.85);
 }
 
 .cta .cta-innerv {
-  position: relative;
-  padding: 3rem;
-  margin: 0.5rem;
-  background-color: rgba(255, 255, 255, 0.85);
+    position: relative;
+    padding: 3rem;
+    margin: 0.5rem;
+    background-color: rgba(255, 255, 255, 0.85);
 }
+
 
 /* Estilos para secciones en dispositivos grandes */
+
 @media (min-width: 992px) {
-  .about-heading .about-heading-img {
-    position: relative;
-    z-index: 0;
-  }
-  .about-heading .about-heading-content {
-    margin-top: -5rem;
-    position: relative;
-    z-index: 1;
-  }
+    .about-heading .about-heading-img {
+        position: relative;
+        z-index: 0;
+    }
+    .about-heading .about-heading-content {
+        margin-top: -5rem;
+        position: relative;
+        z-index: 1;
+    }
 }
 
 @media (min-width: 992px) {
-  .product-item .product-item-title {
-    position: relative;
-    z-index: 1;
-    margin-bottom: -3rem;
-  }
-  .product-item .product-item-img {
-    position: relative;
-    z-index: 0;
-    max-width: 60vw;
-  }
-  .product-item .product-item-description {
-    position: relative;
-    z-index: 1;
-    margin-top: -3rem;
-    max-width: 50vw;
-  }
+    .product-item .product-item-title {
+        position: relative;
+        z-index: 1;
+        margin-bottom: -3rem;
+    }
+    .product-item .product-item-img {
+        position: relative;
+        z-index: 0;
+        max-width: 60vw;
+    }
+    .product-item .product-item-description {
+        position: relative;
+        z-index: 1;
+        margin-top: -3rem;
+        max-width: 50vw;
+    }
 }
+
 
 /* Horarios de apertura */
+
 @media (min-width: 992px) {
-  .list-hours {
-    width: 50%;
-    font-size: 1.1rem;
-  }
+    .list-hours {
+        width: 50%;
+        font-size: 1.1rem;
+    }
 }
+
 
 /* Dirección */
+
 .address strong {
-  font-size: 1.2rem;
+    font-size: 1.2rem;
 }
+
 
 /* Pie de página */
+
 .footer {
-   background-color: rgba(191, 89, 157, 0.8);
+    background-color: rgba(191, 89, 157, 0.8);
 }
+
 
 /* Botones */
+
 .btn {
-  box-shadow: 0px 3px 3px 0px rgba(33, 37, 41, 0.1);
+    box-shadow: 0px 3px 3px 0px rgba(33, 37, 41, 0.1);
 }
+
 
 /* Fuente ligera */
+
 .font-weight-light {
-  font-weight: 100 !important;
+    font-weight: 100 !important;
 }
+
 
 /* Márgenes superiores */
-.mbtm{
-  padding-top: 5rem;
+
+.mbtm {
+    padding-top: 5rem;
 }
 
-.mbt{
-  padding-top: 2rem;
+.mbt {
+    padding-top: 2rem;
 }
 
-.mbt1{
-  padding-top: 1.25rem;
+.mbt1 {
+    padding-top: 1.25rem;
 }
+
 
 /* Enlaces */
-a.link{
-  color: rgba(255, 255, 255, 0.7);
+
+a.link {
+    color: rgba(255, 255, 255, 0.7);
 }
 
-a.link:hover{
-  text-decoration: none;
-  color: rgba(255, 255, 255, 0.4);
+a.link:hover {
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.4);
 }
+
 
 /* Contenido de sección */
-.section-content{
-  font-family: 'Lora' !important;
-  font-size: 16px !important;
-  font-weight: 400 !important;
-  line-height: 28px !important;
+
+.section-content {
+    font-family: 'Lora' !important;
+    font-size: 16px !important;
+    font-weight: 400 !important;
+    line-height: 28px !important;
 }
+
 
 /* Lista de errores */
-ul.errorlist{
-  padding-top: .75rem;
-  font-style: italic;
-  color: red;
+
+ul.errorlist {
+    padding-top: .75rem;
+    font-style: italic;
+    color: red;
 }
+
 
 /* caracteristicas de los enlaces */
-.linksCategorias{
-  color: white !important;
-  text-decoration: underline;
+
+.linksCategorias {
+    color: white !important;
+    text-decoration: underline;
 }
 
-.linksCategorias:hover{
-  text-decoration: none;
+.linksCategorias:hover {
+    text-decoration: none;
 }
 
 .contenedorFormulario {
-  background-color: rgba(203, 70, 161, 0.962); /* Color rosa */
-  width: 50%;
-  margin: 10px auto;
-  border-radius: 5px;
-  padding: 1px 0px;
+    background-color: rgba(203, 70, 161, 0.962);
+    /* Color rosa */
+    width: 50%;
+    margin: 10px auto;
+    border-radius: 5px;
+    padding: 1px 0px;
 }
 
-
-a {
-  color: white;
-  text-decoration: none;
-  padding: 8px 12px;
-  background-color: #007bff;
-  border: 1px solid #007bff;
-  border-radius: 5px;
+.custom-toggler {
+    background: none !important;
+    /* Elimina el fondo */
+    border: none !important;
+    /* Elimina los bordes */
+    padding: 0 !important;
+    /* Elimina el padding */
+    outline: none !important;
+    /* Elimina el borde al hacer clic */
 }
 
+.custom-toggler .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important;
+    background-size: contain !important;
+    /* Ajusta el tamaño del ícono */
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 1.5em;
+    height: 1.5em;
+}
