Implementacion de historial de pedidos anteriores

--- a/ProyectoWeb/ProyectoWebApp/templates/ProyectoWebApp/base.html
+++ b/ProyectoWeb/ProyectoWebApp/templates/ProyectoWebApp/base.html
@@ -61,6 +61,9 @@
                 <li class="nav-item {% if request.path == '/tienda/' %}active{% endif %} px-lg-4">
                     <a class="nav-link text-uppercase text-expanded" href="{% url 'Tienda' %}">Tienda</a>
                 </li>
+                <li class="nav-item {% if request.path == '/pedidos/historial/' %}active{% endif %} px-lg-4">
+                    <a class="nav-link text-uppercase text-expanded" href="{% url 'historial_compras' %}">Historial</a>
+                </li>
             </ul>
         </div>
         
