Cambio en template de historial

--- a/ProyectoWeb/pedidos/templates/pedidos/historial.html
+++ b/ProyectoWeb/pedidos/templates/pedidos/historial.html
@@ -1,7 +1,7 @@
 {% extends "ProyectoWebApp/base.html" %}
 {% block content %}
 <div class="container my-5">
-    <h2 class="text-center mb-4">Historial de Compras</h2>
+    <h2 class="text-center text-white font-weight-bold">Historial de Compras</h2>
     {% if pedidos %}
         <ul class="list-group">
             {% for pedido in pedidos %}
